@@ -43,7 +43,11 @@
 #define NULL (void *)0
 #endif
 
+#if defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka) || defined(__SDCC_tlcs90)
+int abs(int j) __preserves_regs(b, c, iyl, iyh);
+#else
 int abs(int j);
+#endif
 long int labs(long int j);
 
 extern float atof (const char *nptr);
